--- a/docs/sunwait.adoc
+++ b/docs/sunwait.adoc
@@ -16,7 +16,7 @@
 // SPDX-License-Identifier: GPL-3.0-only
 
 = sunwait(1)
-:docdate: 2025-07-09
+:docdate: 2025-07-20
 :doctype: manpage
 :mansource: sunwait
 
@@ -26,88 +26,50 @@ sunwait - Calculates sunrise or sunset times
 
 == Synposis
 
-// TODO: Split these into dedicated pages
-
-*sunwait* *poll* [_general options_] [_calculation options_]
-
-*sunwait* *wait* [_general options_] [_calculation options_]
-
-*sunwait* *list* [_DAYS_] [_general options_] [_calculation options_]
-
-*sunwait* *report* [*d* _<DAY>_] [*m* _<MONTH>_] [*y* _<YEAR>_] [_general options_] [_calculation options_]
-
-*sunwait* *report* *today* [_options_] [_calculation options_]
+*sunwait* [_options_] _<command>_ [_args_]
 
 == Description
 
 Sunwait calculates, displays, or waits for sunrise or sunset times at the given location.
 
-*poll* will be called if no command is specified.
+See *sunwait-poll*(1), *sunwait-wait*(1), *sunwait-list*(1) and *sunwait-report*(1) for command specific document.
 
 == Options
 
-=== General options
-
-++[++*no*]*debug*::
+*--debug*::
 	Prints debug logs. *wait* command exits in one minute if this option is set.
 
-++[++*no*]*version*::
-	Print the version number.
+*--version*::
+	Prints version number and exits.
 
-++[++*no*]*help*::
-	Print help message.
+*--help*::
+	Prints help message to stdout and exits.
 
-++[++*no*]*gmt*::
-	Print times in GMT.
+*--utc*::
+	Prints and parses times in UTC timezone instead of local timzone.
 
-=== Calculation options
+*--lat* _<degree>_, *--latitude* _<degree>_::
+_degree_ is a signed floating point number or a positive floating point number with N or S suffix.
+Defaults to the latitude of Bingham, England.
 
-_TWILIGHT TYPE_::
-*sunwait* considers it's day when twilight starts and night when twilight ends.
-This option sets a twilight type, which defines an angle of the Sun to consider twilight.
-Possible values are:
+*--lon* _<degree>_, *--longitude* _<degree>_::
+_degree_ is a signed floating point number or a positive floating point number with E or W suffix.
+Defaults to the longitude of Bingham, England.
+
+*--twilight* _<type>_::
+Sets a twilight type, which defines an angle of the Sun to consider twilight.
+Valid values are:
 
 * *daylight*      Top of the Sun just below (0 degrees) the horizon.
 * *civil*         Civil twilight, top of the Sun 6 degrees below the horizon.
 * *nautical*      Nautical twilight, top of the Sun 12 degrees below the horizon.
 * *astronomical*  Astronomical twilight, top of the Sun 18 degrees below the horizon.
+* _<degree>_        Custom angle as a floating point number. Can be negative.
 
-+
-The default value is *daylight*.
-You can also set arbitrary angle with "*angle* _<degree>_".
-
-_SUNRISE OR SUNSET_::
-Targets sunrise or sunset when set.
-If this option is not set, *sunwait* targets both.
-
-* *rise*   Sunrise, the Sun rose and the twilight starts.
-* *set*    Sunset, the Sun set past the twilight.
-
-*offset* _OFFSET_::
+*-o* _<duration>_, *--offset* _<duration>_::
 Time offset to add to sunrise time and subtract from sunset time.
 This offset value shifts sunrise and sunset time towards noon by the specified amount.
-The value can be either of _MM_ (minutes) or _HH:MM_, and can have minus sign to represent negative amount.
-
-_LATITUDE_::
-Degrees in positive floating point without a unit, suffixed with *N* or *S*.
-When unspecified, this will be the latitude of Bingham, England.
-
-_LONGITUDE_::
-Degrees in positive floating point without a unit, suffixed with *E* or *W*.
-When unspecified, this will be the longitude of Bingham, England.
-
-_DAYS_::
-Prints report for next _N_ days, where _N_ is the specified value.
-Defaults to *1*.
-
-*d* _<DAY>_::
-Day of the month. 1 to 31.
-
-*m* _<MONTH>_::
-Month. 1 to 12.
-
-*y* _<YEAR>_::
-Years since 2000. 0 to 99.
+The value can be either of *MM* (minutes) or *HH:MM*, and can have hyphen to represent negative offset.
 
 == Exit status
 
@@ -115,29 +77,14 @@ Years since 2000. 0 to 99.
 
 *1*    Error, uncategorized or generic.
 
-*2*    It's day or twilight. Only *poll* exits with this status.
+*10*   Out of memory.
 
-*3*    It' night (after twilight). Only *poll* exits with this status.
+*11*   Error during writing to stdout.
 
-== Examples
+*12*   Error during writing to stderr.
 
-Prints it's DAY or NIGHT at Giza Necropolis.
+*15*   Incorrect CLI usage, such as unknown option and invalid option value.
 
-[,shell]
-----
-sunwait poll 29.977435N 31.132484E
-----
+== See also
 
-Waits for 10 minutes before sunset at Giza Necropolis.
-
-[,shell]
-----
-sunwait wait set offset 10 29.977435N 31.132484E
-----
-
-Wait until 1 hour 15 minutes 10 seconds before the Sun rises in Greenwich, London.
-
-[,shell]
-----
-sunwait wait rise offset -1:15:10 51.477932N 0.000000E
-----
+*sunwait-poll*(1), *sunwait-wait*(1), *sunwait-report*(1), *sunwait-list*(1)
